--- a/README.html
+++ b/README.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- [//]: # (name : google-site-verification) 
- [//]: # (content : 61IJ2wJFuU34JlyubEdmVJoieEaqB9oUQOsgsGPMv7M) 
+ <meta name="google-site-verification" content="61IJ2wJFuU34JlyubEdmVJoieEaqB9oUQOsgsGPMv7M" />
 </head>
 <body>
   
@@ -17,7 +16,7 @@
   <li>📫 How to reach me: ...</li>
   <li>😄 Pronouns: ...</li>
   <li>⚡ Fun fact: ...</li>
-  <li> <div id = "heysh"> <div name="google-site-verification" content="61IJ2wJFuU34JlyubEdmVJoieEaqB9oUQOsgsGPMv7M" /> hy </div> </li>
+  <li> <div id = "heysh"> <meta name="google-site-verification" content="61IJ2wJFuU34JlyubEdmVJoieEaqB9oUQOsgsGPMv7M" /></div> </li>
 </ul>
 
 </body>
