--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Me</title>
+<title>Siddhant Bapna</title>
+<meta name="google-site-verification" content="6tHs7V8r8UHp5Cao7sFQrG5T7wxaG322h-i_fsowNuc" />
+  <style>
+     body{
+         font-size: 150%;
+     }
+     pre {
+        overflow-x: auto;
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -pre-wrap;
+        white-space: -o-pre-wrap;
+        word-wrap: break-word;
+     }
+    </style>
 </head>
 <body>
-    I am Siddhant Bapna
-</body>
+    <img class="content" src="home.jpg" alt="callmanqo" width=500>
+    <div class="content">
+    <pre>
+Hello I am Siddhant Bapna(siddhantbapna) and this is abotu me page of the this website
+   
+   Yeah! it is also incomplete now or can say that this is a WIP project
+   
+   </pre>
 </html>
